--- a/02-display-direction.html
+++ b/02-display-direction.html
@@ -32,32 +32,37 @@
     </style>
   </head>
   <body>
-    <h1>Display flex row (LTR)</h1>
+    <h1>Examples of Display flex -> Property 'flex-direction'</h1>
+    <h2>flex-direction: row (LTR)</h2>
     <div class="container row">
       <div class="item">Item 1</div>
       <div class="item">Item 2</div>
       <div class="item">Item 3</div>
     </div>
+    <hr>
 
-    <h1>Display flex row reverse (RTL)</h1>
+    <h2>flex-direction: row-reverse (RTL)</h2>
     <div class="container row-reverse">
       <div class="item">Item 4</div>
       <div class="item">Item 5</div>
       <div class="item">Item 6</div>
     </div>
+    <hr>
 
-    <h1>Display flex column</h1>
+    <h2>flex-direction: column</h2>
     <div class="container col">
       <div class="item">Item 7</div>
       <div class="item">Item 8</div>
       <div class="item">Item 9</div>
     </div>
+    <hr>
 
-    <h1>Display flex col reverse</h1>
+    <h2>flex-direction: column-reverse</h2>
     <div class="container col-reverse">
       <div class="item">Item 10</div>
       <div class="item">Item 11</div>
       <div class="item">Item 12</div>
     </div>
+    <hr>
   </body>
 </html>
