--- a/01-flex-display.html
+++ b/01-flex-display.html
@@ -25,14 +25,17 @@
     </style>
   </head>
   <body>
-    <h1>Display block: value for default</h1>
+    <h1>Examples of Display -> Property 'display'</h1>
+    <h2>display: block</h2>
     <div class="container block">
       <div class="item">Item 1</div>
       <div class="item">Item 2</div>
       <div class="item">Item 3</div>
     </div>
+    <br><br><br><br>
+    <hr>
 
-    <h1>Display flex</h1>
+    <h2>display: flex</h2>
     <div class="container flex">
       <div class="item">Item 4</div>
       <div class="item">Item 5</div>
