--- a/04-align-items.html
+++ b/04-align-items.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Justify Content</title>
+    <title>Align Items</title>
     <style>
       .container {
         width: 400px;
@@ -13,32 +13,40 @@
       }
       .item {
         width: 100px;
-        height: 100px;
         background-color: aqua;
       }
       .flex-start {
-        justify-content: flex-start;
+        align-items: flex-start;
       }
       .flex-end {
-        justify-content: flex-end;
+        align-items: flex-end;
       }
-      .flex-center {
-        justify-content: center;
+      .center {
+        align-items: center;
       }
-      .space-between {
-        justify-content: space-between;
+      .start {
+        align-items: start;
       }
-      .space-around {
-        justify-content: space-around;
+      .end {
+        align-items: end;
       }
-      .space-evenly {
-        justify-content: space-evenly;
+      .baseline {
+        align-items: baseline;
+      }
+      .stretch {
+        align-items: stretch;
+      }
+      .p-1 {
+        padding: 1rem;
+      }
+      .p-3 {
+        padding: 3rem;
       }
     </style>
   </head>
   <body>
-    <h1>Examples of Display flex -> Property 'justify-content'</h1>
-    <h2>justify-content: flex-start</h2>
+    <h1>Examples of Display flex -> Property 'align-items'</h1>
+    <h2>align-items: flex-start</h2>
     <div class="container flex-start">
       <div class="item">Item 1</div>
       <div class="item">Item 2</div>
@@ -46,7 +54,7 @@
     </div>
     <hr>
 
-    <h2>justify-content: flex-end</h2>
+    <h2>align-items: flex-end</h2>
     <div class="container flex-end">
       <div class="item">Item 4</div>
       <div class="item">Item 5</div>
@@ -54,35 +62,43 @@
     </div>
     <hr>
 
-    <h2>justify-content: flex-center</h2>
-    <div class="container flex-center">
+    <h2>align-items: flex-center</h2>
+    <div class="container center">
       <div class="item">Item 7</div>
       <div class="item">Item 8</div>
       <div class="item">Item 9</div>
     </div>
     <hr>
 
-    <h2>justify-content: space-between</h2>
-    <div class="container space-between">
+    <h2>align-items: start</h2>
+    <div class="container start">
       <div class="item">Item 10</div>
       <div class="item">Item 11</div>
       <div class="item">Item 12</div>
     </div>
     <hr>
 
-    <h2>justify-content: space-around</h2>
-    <div class="container space-around">
+    <h2>align-items: end</h2>
+    <div class="container end">
       <div class="item">Item 10</div>
       <div class="item">Item 11</div>
       <div class="item">Item 12</div>
     </div>
     <hr>
 
-    <h2>justify-content: space-evenly</h2>
-    <div class="container space-evenly">
+    <h2>align-items: baseline</h2>
+    <div class="container baseline">
       <div class="item">Item 10</div>
-      <div class="item">Item 11</div>
-      <div class="item">Item 12</div>
+      <div class="item p-1">Item 11Item 11Item 11Item 11Item 11Item 11</div>
+      <div class="item p-3">Item 12Item 12Item 12</div>
+    </div>
+    <hr>
+
+    <h2>align-items: stretch</h2>
+    <div class="container stretch">
+      <div class="item">Item 10</div>
+      <div class="item">Item 11Item 11Item 11Item 11Item 11Item 11</div>
+      <div class="item">Item 12Item 12Item 12</div>
     </div>
     <hr>
   </body>
