Add download section

--- a/23-flex-website.html
+++ b/23-flex-website.html
@@ -18,7 +18,7 @@
       <div class="area">
         <main>
           <section class="courses">
-            <article class="course">
+            <article class="course courses-two">
               <a href="#">
                 <div>
                   <img src="./img/ReactJS.webp" alt="React.js" width="100%" />
@@ -34,7 +34,7 @@
                 </div>
               </a>
             </article>
-            <article class="course">
+            <article class="course courses-two">
               <a href="#">
                 <div>
                   <img src="./img/nextJS.webp" alt="Next.js" width="100%" />
@@ -50,7 +50,7 @@
                 </div>
               </a>
             </article>
-            <article class="course">
+            <article class="course courses-three">
               <a href="#">
                 <div>
                   <img src="./img/nestJS.png" alt="Nest.js" width="100%" />
@@ -66,10 +66,14 @@
                 </div>
               </a>
             </article>
-            <article class="course">
+            <article class="course courses-three">
               <a href="#">
                 <div>
-                  <img src="./img/Tailwind.png" alt="Tailwind.css" width="100%" />
+                  <img
+                    src="./img/Tailwind.png"
+                    alt="Tailwind.css"
+                    width="100%"
+                  />
                 </div>
                 <div class="course-content">
                   <h2>Tailwind.css</h2>
@@ -82,6 +86,91 @@
                 </div>
               </a>
             </article>
+            <article class="course courses-three">
+              <a href="#">
+                <div>
+                  <img src="./img/ReactJS.webp" alt="React.js" width="100%" />
+                </div>
+                <div class="course-content">
+                  <h2>React.js</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Aperiam maiores nesciunt rerum unde quasi earum sed eveniet,
+                    placeat porro excepturi officia? Necessitatibus, doloribus
+                    est atque sint iusto beatae a dicta!
+                  </p>
+                </div>
+              </a>
+            </article>
+            <article class="course courses-one">
+              <a href="#">
+                <div>
+                  <img src="./img/nextJS.webp" alt="Next.js" width="100%" />
+                </div>
+                <div class="course-content">
+                  <h2>Next.js</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Aperiam maiores nesciunt rerum unde quasi earum sed eveniet,
+                    placeat porro excepturi officia? Necessitatibus, doloribus
+                    est atque sint iusto beatae a dicta!
+                  </p>
+                </div>
+              </a>
+            </article>
+          </section>
+          <section class="recent">
+            <h2 class="recent-title">Recent Course</h2>
+            <div class="recent-card">
+              <div class="recent-img">
+                <img src="img/nestJS.png" alt="Nest.js" width="100%" />
+              </div>
+              <div class="recent-content">
+                <h2>Nest.js</h2>
+                <div class="recent-info">
+                  <span>2024</span>
+                  <span>6 hrs</span>
+                  <span>Advanced</span>
+                  <span>+120 videos</span>
+                  <p class="recent-text">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Mollitia sint esse facilis praesentium, debitis fugiat earum
+                    doloribus. Accusamus adipisci quia corrupti itaque laborum.
+                    Ab quaerat laudantium aliquid! Tempore, assumenda unde.
+                  </p>
+                  <a href="#">Get Course</a>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section class="downloads">
+            <h2 class="recent-title">Downloads</h2>
+            <div class="downloads-card">
+              <div class="downloads-img">
+                <img src="./img/Typescript.avif" alt="" width="100%" />
+              </div>
+              <div class="downloads-content">
+                <div class="downloads-info">
+                  <div class="downloads-type">
+                    <h4>Topic:</h4>
+                    <p>Typescript, Javascript, ECS6</p>
+                  </div>
+                  <div class="downloads-users">
+                    <h4>Last downloads:</h4>
+                    <img src="./img/user1.png" alt="User1" />
+                    <img src="./img/user2.png" alt="User2" />
+                    <img src="./img/user3.png" alt="User3" />
+                    <img src="./img/user4.png" alt="User4" />
+                  </div>
+                </div>
+                <div class="downloads-stats">
+                  <span class="rate">8.9</span>
+                  <span>( 1247 downloads )</span>
+                  <span>( 7 courses )</span>
+                  <a href="#">Download</a>
+                </div>
+              </div>
+            </div>
           </section>
         </main>
         <aside class="right">
