Fix menu and footer

--- a/23-flex-website.html
+++ b/23-flex-website.html
@@ -13,7 +13,13 @@
           <h1 class="header-title">My Web Site</h1>
           <p class="header-lema">The best courses</p>
         </div>
-        <nav>Here is the menu</nav>
+        <nav class="principal-menu">
+          <ul>
+            <li><a href="#">Courses</a></li>
+            <li><a href="#">Downloads</a></li>
+            <li><a href="#">Gallery</a></li>
+          </ul>
+        </nav>
       </header>
       <div class="area">
         <main>
@@ -172,19 +178,118 @@
               </div>
             </div>
           </section>
+          <section class="gallery">
+            <h2 class="recent-title">Gallery of Courses</h2>
+            <div class="gallery-images">
+              <div class="gallery-img">
+                <a href="./img/ReactJS.webp">
+                  <img src="./img/ReactJS.webp" alt="ReactJS" width="100%" />
+                </a>
+              </div>
+              <div class="gallery-img">
+                <a href="./img/ReactJS.webp">
+                  <img src="./img/ReactJS.webp" alt="ReactJS" width="100%" />
+                </a>
+              </div>
+              <div class="gallery-img">
+                <a href="./img/ReactJS.webp">
+                  <img src="./img/ReactJS.webp" alt="ReactJS" width="100%" />
+                </a>
+              </div>
+              <div class="gallery-img">
+                <a href="./img/ReactJS.webp">
+                  <img src="./img/ReactJS.webp" alt="ReactJS" width="100%" />
+                </a>
+              </div>
+              <div class="gallery-img">
+                <a href="./img/ReactJS.webp">
+                  <img src="./img/ReactJS.webp" alt="ReactJS" width="100%" />
+                </a>
+              </div>
+              <div class="gallery-img">
+                <a href="./img/ReactJS.webp">
+                  <img src="./img/ReactJS.webp" alt="ReactJS" width="100%" />
+                </a>
+              </div>
+              <div class="gallery-img">
+                <a href="./img/ReactJS.webp">
+                  <img src="./img/ReactJS.webp" alt="ReactJS" width="100%" />
+                </a>
+              </div>
+              <div class="gallery-img">
+                <a href="./img/ReactJS.webp">
+                  <img src="./img/ReactJS.webp" alt="ReactJS" width="100%" />
+                </a>
+              </div>
+              <div class="gallery-img">
+                <a href="./img/ReactJS.webp">
+                  <img src="./img/ReactJS.webp" alt="ReactJS" width="100%" />
+                </a>
+              </div>
+              <div class="gallery-img">
+                <a href="./img/ReactJS.webp">
+                  <img src="./img/ReactJS.webp" alt="ReactJS" width="100%" />
+                </a>
+              </div>
+            </div>
+          </section>
         </main>
         <aside class="right">
-          <h1>Right Title</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
-            voluptate est ipsum sequi asperiores similique consectetur sint
-            veniam assumenda reiciendis ad numquam officiis quo, delectus, totam
-            illum, vero corrupti magnam.
-          </p>
+          <div class="box">
+            <div class="box-content">
+              <h3>Most Sold Courses</h3>
+              <nav class="box-menu">
+                <ul>
+                  <li><a href="#">ReactJs</a></li>
+                  <li><a href="#">NestJs</a></li>
+                  <li><a href="#">NextJs</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+          <div class="box">
+            <div class="box-content">
+              <h3>Most Popular Languages</h3>
+              <nav class="box-menu">
+                <ul>
+                  <li><a href="#">JavaScript</a></li>
+                  <li><a href="#">HTML5</a></li>
+                  <li><a href="#">CSS3</a></li>
+                  <li><a href="#">TypeScript</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+          <div class="box">
+            <div class="box-content">
+              <h3>Next Courses</h3>
+              <nav class="box-menu">
+                <ul>
+                  <li><a href="#">Astro</a></li>
+                  <li><a href="#">AWS</a></li>
+                  <li><a href="#">Python</a></li>
+                  <li><a href="#">Testing</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+          <div class="box">
+            <div class="box-content">
+              <h3>Backend Courses</h3>
+              <nav class="box-menu">
+                <ul>
+                  <li><a href="#">NodeJS</a></li>
+                  <li><a href="#">PHP</a></li>
+                  <li><a href="#">Python</a></li>
+                  <li><a href="#">Golang</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
         </aside>
       </div>
       <footer>
-        <h1>Footer</h1>
+        All rights reserved &copy;
       </footer>
     </div>
   </body>
